# restaurant-accounting

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  restaurant_accounting.sql
app/ui/: main.py
docs/: ContextDiagram.drawio  SequenceDiagram.drawio  UseCasesDiagram.drawio  domain.md
infra/db/: database.db  database_structure.sql  database_test_data.sql
project_database/: database.db  main.py  restaurant_accounting.sql
scripts/: build-lib.sh  clean.sh  format.sh  run.sh  tests.sh
tests/smoke/: README.md  smoke-testing.py  test_smoke.py
tests/unit/: test_database_manager.py
