[project]
name = "final-project"
version = "0.2.0"
description = "\"Restaurant accounting system\""
authors = [
    {name = "candydragon"}
]
readme = "README.md"
requires-python = ">=3.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "packages", from = "." }]
